--- a/assets/style/top.css
+++ b/assets/style/top.css
@@ -1,28 +1,25 @@
-
-.top{
-  background-color: #F6F6EB;
-  
+.top .top-color-header{
+  background-color: #3e24cf; 
 }
-
 .nav-bar{
   box-sizing: border-box;
   display: flex;
   font-weight: 600;
   font-size: x-small;
   gap: 5px;
-  margin-top: 18px;
+  padding-top: 18px;
   align-items: baseline;
   font-size: medium;
 }
 .log{
   margin-top: 19px;
 }
-
 .icon{
  margin-top: -1px;
 }
 .title{
-  border: 2px  solid #F6F6EB;
+  border: 2px  solid #3c22d0;
+  color: white;
   width: 30%;
   border-radius: 4px;
   align-content: center;
@@ -30,73 +27,98 @@
   padding: 4px;
 }
 .title:hover{
-  border: 2px  solid rgb(0, 0, 0);
+  border: 2px  solid white;
   border-radius: 4px;
   width: 30%;
   cursor: pointer;
 }
-
 .title2{
-  border: 2px  solid #F6F6EB;
-  width: 25%;
+  border: 2px  solid #3c22d0;
+  color: white;
+  width: 20%;
   border-radius: 4px;
   align-content: center;
   transition: ease-in-out 0.3s;
   padding: 2px;
 }
 .title2:hover{
-  border: 2px  solid rgb(0, 0, 0);
+  border: 2px  solid white;
   border-radius: 4px;
   cursor: pointer;
 }
 .subscription{
   right: 0;
 }
-
 .sign-up{
-  border: 2px  solid #F6F6EB;
-  background-color: #381fd2;
-  color: white;
+  border: 2px  solid white;
+  background-color: white;
+  color: #3c22d0;
   width: 25%;
   border-radius: 4px;
   align-content: center;
-  transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.1s;
   padding: 2px;
 }
 .sign-up:hover{
-  border: 2px  solid white;
+  border: 2px  solid rgb(234, 231, 231);
+  background-color: rgb(234, 231, 231);
   border-radius: 4px;
   cursor: pointer;
 }
 
 /* --------- RESPONSIVE DISPLAY --------- */
+
+.top-color-header{
+  background-color: #3e24cf;
+}
+
 .responsive{
   display: none;
-  background-color: #3f4cff;
-  position: absolute;
-  right: 0;
-  left: 0;
 }
+
+.header-responsive{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-top: 10px;
+}
+
+.item-row{
+  display: flex;
+  gap: 20px;
+  align-items: baseline;
+}
+
+.item-sign-up{
+  color: white;
+  text-decoration: none;
+  border: 2px  solid #F6F6EB;
+  background-color: white;
+  color: #381fd2;
+  border-radius: 5px;
+  align-content: center;
+  transition: ease-in-out 0.3s;
+  padding: 3px 10px;
+  font-weight: bold;
+}
+
+.item-2{
+  background-color: white;
+  border-radius: 50px;
+  width: 35px;
+  padding: 5px;
+}
+
 .responsive-tab{
   margin-top: 10px;
 }
-
 .topnav {
   overflow: hidden;
   position: fixed;
   align-self: center;
   margin-top: 20px;
   box-shadow: 0px 0px 2px -2px  #000000;      
-}
-.icon-responsive {
-  display: none;
-  flex-wrap: nowrap;
-  position: absolute;
-  margin: 2rem;
-  right: 0;
-  top: 0;
-  background-color: white;
-  padding: 5px;
 }
 
 .bar{
@@ -106,26 +128,16 @@
 }
 
 @media (max-width: 1200px) {
-  .top{
-    display: none;
-  }
+  .top{ display: none; }
 }
 
 @media (max-width: 1199px) {
-  .responsive{
-    display: block;
-  }
-  .icon-responsive{
-    display: block;
-  }
+  .responsive{ display: block; }
+  .icon-responsive{ display: block; }
 }
 
 .ul-responsive{
   list-style-type: none;
   gap: 10px;
   font-family: 'Silkscreen', cursive;
-}
-
-.fa:hover{
-  content: '\f00d';
 }
